# unnix

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  package.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  layout.md  manifest.md
e2e/binary/: test  unnix.kdl  unnix.lock.json
e2e/python/: test  unnix.kdl  unnix.lock.json
src/: cli.rs  lockfile.rs  main.rs  package.rs  state.rs  system.rs
src/command/: add.rs  cache.rs  ci.rs  env.rs  init.rs  lock.rs  mod.rs  print.rs  shell.rs  update.rs
src/manifest/: imp.rs  mod.rs
src/manifest/tests/: basic.kdl  cache-no-default.kdl  hydra.kdl  mod.rs
src/manifest/tests/snapshots/: unnix__manifest__tests__basic.snap  unnix__manifest__tests__cache_no_default.snap  unnix__manifest__tests__hydra.snap
src/resolver/: devbox.rs  hydra.rs  mod.rs
src/source/: hydra.rs  mod.rs
src/store/: mod.rs  nar.rs  path.rs
src/store/snapshots/: unnix__store__nar__tests__basic.snap  unnix__store__path__tests__basic-2.snap  unnix__store__path__tests__basic.snap
tests/: lock.rs  utils.rs
tests/fixtures/basic/: unnix.kdl  unnix.lock.json
tests/fixtures/devbox/: unnix.kdl  unnix.lock.json
