[package]
name = "unnix"
version = "0.1.0-alpha.2"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2024"
description = "Use Nix packages without installing Nix"
readme = "README.md"
homepage = "https://github.com/figsoda/unnix"
repository = "https://github.com/figsoda/unnix"
license = "MPL-2.0"
keywords = ["ci", "cli", "hydra", "nix"]
categories = ["command-line-utilities"]

[dependencies]
async-stream = "0.3.6"
blake3 = "1.8.3"
camino = "1.2.2"
dashmap = { version = "6.1.0", features = ["serde"] }
data-encoding = "2.10.0"
dirs = "6.0.0"
harmonia-store-core = "0.0.0-alpha.0"
harmonia-utils-hash = "0.0.0-alpha.0"
itertools = "0.14.0"
kdl = "6.5.0"
miette = { version = "7.6.0", features = ["fancy"] }
monostate = "1.0.2"
nix-nar = "0.3.1"
parse-display = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_with = "3.17.0"
shell-escape = "0.1.5"
strfmt = "0.2.5"
supports-color = "3.0.2"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"

[dependencies.async-compression]
version = "0.4.41"
features = [
  "brotli",
  "bzip2",
  "gzip",
  "lz4",
  "lzma",
  "tokio",
  "xz-parallel",
  "zstd",
]

[dependencies.clap]
version = "4.6.0"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.fs4]
version = "0.13.1"
default-features = false
features = ["tokio"]

[dependencies.tokio]
version = "1.50.0"
features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"]

[build-dependencies]
camino = "1.2.2"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
clap_mangen = "0.2.33"

[dev-dependencies]
assert_cmd = "2.2.0"
dir-diff = "0.3.3"
fs_extra = "1.3.0"
insta = "1.46.3"
tempfile = "3.27.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
