[package]
name = "unnix"
version = "0.1.1"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2024"
description = "Reproducible Nix environments without installing Nix"
readme = "README.md"
homepage = "https://github.com/figsoda/unnix"
repository = "https://github.com/figsoda/unnix"
license = "MPL-2.0"
keywords = ["ci", "cli", "devbox", "hydra", "nix"]
categories = ["command-line-utilities"]

[dependencies]
# keep-sorted start
async-stream = "0.3.6"
blake3 = "1.8.5"
camino = "1.2.2"
dashmap = { version = "6.1.0", features = ["serde"] }
data-encoding = "2.11.0"
dirs = "6.0.0"
harmonia-store-core = "0.0.0-alpha.0"
harmonia-utils-hash = "0.0.0-alpha.0"
itertools = "0.14.0"
kdl = "6.5.0"
miette = { version = "7.6.0", features = ["fancy"] }
monostate = "1.0.2"
nix-nar = "0.4.0"
parse-display = "0.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_with = "3.19.0"
shell-escape = "0.1.5"
strfmt = "0.2.5"
supports-color = "3.0.2"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
# keep-sorted end

[dependencies.async-compression]
version = "0.4.42"
features = [
  "brotli",
  "bzip2",
  "gzip",
  "lz4",
  "lzma",
  "tokio",
  "xz-parallel",
  "zstd",
]

[dependencies.clap]
version = "4.6.1"
features = ["cargo", "derive", "env", "unicode", "wrap_help"]

[dependencies.fs4]
version = "1.1.0"
default-features = false
features = ["tokio"]

[dependencies.tokio]
version = "1.52.1"
features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"]

[build-dependencies]
camino = "1.2.2"
clap = { version = "4.6.1", features = ["color", "derive", "env"] }
clap_complete = "4.6.3"
clap_mangen = { version = "0.3.0", features = ["env"] }
miette = "7.6.0"

[dev-dependencies]
assert_cmd = "2.2.1"
dir-diff = "0.3.3"
fs_extra = "1.3.0"
insta = "1.47.2"
tempfile = "3.27.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
